--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://thankyoujim.github.io/web-app/",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,3 +34,5 @@
     ]
   }
 }
+
+
